--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="card mg-10">
                 <div class="card__title">
                     <div class="card__title--img">
-                        <img src="/shin.jpg" alt="" srcset="">
+                        <img src="/shin.png" alt="" srcset="">
                     </div>
                     <div class="card__title--name">
                         <h1> Vũ Quang Đạo </h1>
