--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <div class="card__item">
                                 <a href="" target="_blank" class="card__link">
                                     <div class="link__icon">
-                                        <i class="fab fa-linkedin-in"></i>
+                                        <i class="fab fa-telegram"></i>
                                     </div>
                                 </a>
                             </div>
